started work on fundementals