@@ -2,7 +2,7 @@ plugins {
     id("java")
 }
 
-group = "org.example"
+group = "io.github.yusufsdiscordbot"
 version = "1.0-SNAPSHOT"
 
 repositories {
@@ -10,10 +10,27 @@ repositories {
 }
 
 dependencies {
+    implementation("org.javacord:javacord:3.8.0")
+    implementation("io.github.realyusufismail:jconfig:1.0.9")
     testImplementation(platform("org.junit:junit-bom:5.9.1"))
-    testImplementation("org.junit.jupiter:junit-jupiter")
+    testImplementation("org.junit.jupiter:junit-jupiter:5.9.2")
 }
 
 tasks.test {
     useJUnitPlatform()
+}
+
+java {
+    sourceCompatibility = JavaVersion.VERSION_21
+    targetCompatibility = JavaVersion.VERSION_21
+    withSourcesJar()
+
+    // Enable Java preview features
+    toolchain {
+        languageVersion.set(JavaLanguageVersion.of(21))
+    }
+}
+
+tasks.withType<JavaCompile> {
+    options.compilerArgs.add("--enable-preview")
 }
